--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>Sample App</title>
+	<title>MIR24 photobank</title>
   <link href="/static/styles.css" rel="stylesheet" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
