--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,6 +4,7 @@
 	<title>MIR24 photobank</title>
   <link href="/static/styles.css" rel="stylesheet" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 
 <body>
