Adding multi select

--- a/src/app/styles/customisations.scss
+++ b/src/app/styles/customisations.scss
@@ -47,3 +47,28 @@
 .layout__crime-app {
 
 }
+
+.btn-overlay {
+  background-color: white;
+  margin-right: -15px;
+  margin-left: -15px;
+  padding-bottom: -20px;
+  padding: 0;
+}
+
+.div-title{
+  margin-left: 20px;
+  top: -20px;
+  color: #08c;
+  position: relative;
+  width: 240px;
+  height: auto;
+  align-items: center;
+  align-content: center;
+
+}
+
+#additional-buttons{
+  padding-left: 19;
+  padding-bottom: 25;
+}
