--- a/src/app/styles/customisations.scss
+++ b/src/app/styles/customisations.scss
@@ -56,9 +56,17 @@
   padding: 0;
 }
 
+.btn-overlay-list {
+  background-color: white;
+  margin-right: 0px;
+  margin-left: -15px;
+  padding-bottom: -20px;
+  padding: 0;
+}
+
 .div-title{
   margin-left: 20px;
-  top: -20px;
+  top: 0px;
   color: #08c;
   position: relative;
   width: 240px;
