Adding overlay with width x length css

--- a/src/app/styles/customisations.scss
+++ b/src/app/styles/customisations.scss
@@ -49,8 +49,8 @@
 }
 
 .div-title{
-  margin-left: 20px;
-  top: -20px;
+  top: -30px;
+  margin-bottom: -30px;
   color: #08c;
   font: 15px Helvetica, Sans-Serif;
   position: relative;
