Changing info div

--- a/src/app/styles/customisations.scss
+++ b/src/app/styles/customisations.scss
@@ -60,19 +60,6 @@
 
 }
 
-.div-img-overlay{
-  color: white;
-  font: bold 15px Helvetica, Sans-Serif;
-  letter-spacing: -1px;
-  background: rgb(0, 0, 0); /* fallback color */
-  background: rgba(0, 0, 0, 0.7);
-  padding: 10px;
-  position: relative;
-  width: 240px;
-  top: -50px;
-  pointer-events: none;
-}
-
 .container{
   display: table;
 }
@@ -90,12 +77,12 @@
   max-height: 100%;
 }
 
-.container .image-container p {
+.container .image-container .image-info {
   z-index: 100;
   position: relative;
-  color: #08c;
+  color: white;
   font: bold 17px Helvetica, Sans-Serif;
   background: rgb(0,0,0); /* fallback color */
-  background: rgba(255,255,255, 0.7);
+  background: rgba(0,0,0, 0.7);
   top: -60px;
 }
