--- a/src/app/src/list-app/customisations.scss
+++ b/src/app/src/list-app/customisations.scss
@@ -46,3 +46,42 @@
     }
   }
 }
+
+.div-title{
+  margin-bottom: -30px;
+  color: #08c;
+  font: 15px Helvetica, Sans-Serif;
+  position: relative;
+  width: 240px;
+  height: auto;
+  align-items: center;
+  align-content: center;
+
+}
+
+.container{
+  display: table;
+}
+
+.container .image-container {
+  width: 240px;
+  height: 240px;
+    text-align: center;
+    vertical-align: bottom;
+    display: table-cell;
+}
+
+.container .image-container img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.container .image-container .image-info {
+  z-index: 100;
+  position: relative;
+  color: white;
+  font: bold 17px Helvetica, Sans-Serif;
+  background: rgb(0,0,0); /* fallback color */
+  background: rgba(0,0,0, 0.7);
+  top: -60px;
+}
