--- a/src/app/src/list-app/customisations.scss
+++ b/src/app/src/list-app/customisations.scss
@@ -48,7 +48,8 @@
 }
 
 .div-title{
-  margin-bottom: -60px;
+  top: -30px;
+  margin-bottom: -30px;
   color: #08c;
   font: 15px Helvetica, Sans-Serif;
   position: relative;
