--- a/src/app/src/list-app/customisations.scss
+++ b/src/app/src/list-app/customisations.scss
@@ -81,7 +81,7 @@
   z-index: 100;
   position: relative;
   color: white;
-  font: bold 17px Helvetica, Sans-Serif;
+  font: 17px Helvetica, Sans-Serif;
   background: rgb(0,0,0); /* fallback color */
   background: rgba(0,0,0, 0.4);
   top: -60px;
