--- a/src/app/styles/customisations.scss
+++ b/src/app/styles/customisations.scss
@@ -49,7 +49,9 @@
 }
 
 .div-title{
-  margin-bottom: -30px;
+  top: -45px;
+  left: -10px;
+  margin-bottom: -50px;
   color: #08c;
   font: 15px Helvetica, Sans-Serif;
   position: relative;
@@ -85,4 +87,12 @@
   background: rgb(0,0,0); /* fallback color */
   background: rgba(0,0,0, 0.7);
   top: -60px;
+}
+
+.grid-custom {
+  padding: 0px 20px 0px 30px;
+}
+
+.grid-custom a {
+    text-decoration: none;
 }
