--- a/src/app/src/list-app/customisations.scss
+++ b/src/app/src/list-app/customisations.scss
@@ -88,10 +88,7 @@
   top: -60px;
 }
 
-.grid-custom {
-  padding: 0px 20px 0px 30px;
-}
-
-.grid-custom a {
-    text-decoration: none;
+.sk-hits-grid__item {
+  margin-left: 25px;
+  margin-right: 25px;
 }
