--- a/src/app/styles/customisations.scss
+++ b/src/app/styles/customisations.scss
@@ -100,6 +100,7 @@
 .multi-select-btn {
   background-color: white;
   border: 1px solid #ccc;
+  border-radius: 5px;
   cursor: pointer;
   font-weight: 500;
   font-size: 14px;
