--- a/src/app/styles/customisations.scss
+++ b/src/app/styles/customisations.scss
@@ -47,3 +47,63 @@
 .layout__crime-app {
 
 }
+
+.div-title{
+  top: -30px;
+  margin-bottom: -30px;
+  color: #08c;
+  font: 15px Helvetica, Sans-Serif;
+  position: relative;
+  width: 240px;
+  height: auto;
+  align-items: center;
+  align-content: center;
+
+}
+
+.container{
+  display: table;
+}
+
+.container .image-container {
+  width: 240px;
+  height: 240px;
+    text-align: center;
+    vertical-align: bottom;
+    display: table-cell;
+}
+
+.container .image-container img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.container .image-container .image-info {
+  z-index: 98;
+  position: relative;
+  color: white;
+  font: 17px Helvetica, Sans-Serif;
+  background: rgb(0,0,0); /* fallback color */
+  background: rgba(0,0,0, 0.4);
+  top: -40px;
+}
+
+.sk-hits-grid__item {
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
+.sk-action-button, .sk-no-hits__step-action, .sk-range-input__submit {
+  border: none;
+  color: #08c;
+  border-radius: 3px;
+  display: inline-block;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 14px;
+  outline: none;
+}
+
+.sk-no-hits__em {
+  font-style: italic;
+}
