--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -2,16 +2,12 @@
 
 <head>
 	<title>MIR24 photobank</title>
-  <link href="/static/styles.css" rel="stylesheet" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
 </head>
 
 <body>
 	<div id='root'>
 	</div>
-
-	<script src="/static/bundle.js"></script>
-
 </body>
 
 </html>
