https://mir24tv.atlassian.net/browse/PHOTSCRUM-30 - git info

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -9,7 +9,7 @@
 <body>
 	<div id='root'>
 	</div>
-
+	<span class="gitInfo"><%= gitInfo %></span>
 	<script src="/static/bundle.js"></script>
 
 </body>
