--- a/src/app/styles/customisations.scss
+++ b/src/app/styles/customisations.scss
@@ -1,4 +1,10 @@
-
+.gitInfo {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    font-size: 12px;
+    background-color: #e4e4e5;
+}
 
 .layout__crime-app {
   .layout__results {
