https://mir24tv.atlassian.net/browse/PHOTSCRUM-37 - env

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -9,6 +9,7 @@
 <body>
 	<div id='root'>
 	</div>
+	<span id="elasticHost" class="hidden"><%= elasticHost %></span>
 	<span class="gitInfo"><%= gitInfo %></span>
 	<script src="/static/bundle.js"></script>
 
