https://mir24tv.atlassian.net/browse/PHOTSCRUM-39 - phot url env

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -9,7 +9,10 @@
 <body>
 	<div id='root'>
 	</div>
-	<span id="elasticHost" class="hidden"><%= elasticHost %></span>
+	<div id="config" class="hidden">
+		<span id="elasticHost"><%= elasticHost %></span>
+		<span id="photobankBackendHost"><%= photobankBackendHost %></span>
+	</div>
 	<span class="gitInfo"><%= gitInfo %></span>
 	<script src="/static/bundle.js"></script>
 
