https://mir24tv.atlassian.net/browse/PHOT-280 - image delete

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -12,6 +12,9 @@
 	<div id="config" class="hidden">
 		<span id="elasticHost"><%= elasticHost %></span>
 		<span id="photobankBackendHost"><%= photobankBackendHost %></span>
+		<span id="photobankBackendHostApi"><%= photobankBackendHostApi %></span>
+		<span id="photobankBackendUser"><%= photobankBackendUser %></span>
+		<span id="photobankBackendUserApiKey"><%= photobankBackendUserApiKey %></span>
 	</div>
 	<span class="gitInfo"><%= gitInfo %></span>
 	<script src="/static/bundle.js"></script>
