--- a/src/app/styles/customisations.scss
+++ b/src/app/styles/customisations.scss
@@ -94,9 +94,63 @@
   top: -40px;
 }
 
+.btn-custom {
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 14px;
+  color: black;
+  padding: 5px 10px;
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.multi-select-btn {
+  @extend .btn-custom;
+  background-color: white;
+  border: 1px solid #ccc;
+  color: black;
+}
+
+.multi-select-btn:hover {
+  @extend .btn-custom;
+  background-color: #08c;
+  border: 1px solid #ccc;
+  color: white;
+}
+
+.delete-btn {
+  @extend .btn-custom;
+  background-color: white;
+  border: 1px solid #ccc;
+  color: black;
+}
+
+.delete-btn:hover {
+  @extend .btn-custom;
+  background-color: #fff;
+  border: 1px solid rgb(206, 6, 6);
+  color: rgb(206, 6, 6);
+}
+
+.success-btn {
+  @extend .btn-custom;
+  background-color: white;
+  border: 1px solid #ccc;
+  color: black;
+}
+
+.success-btn:hover {
+  @extend .btn-custom;
+  background-color: #fff;
+  border: 1px solid rgb(8, 165, 3);
+  color: rgb(8, 165, 3);
+}
+
 .sk-hits-grid__item {
   margin-left: 25px;
   margin-right: 25px;
+  position: relative;
 }
 
 .sk-action-button, .sk-no-hits__step-action, .sk-range-input__submit {
@@ -117,3 +171,83 @@
 .hidden {
   display: none;
 }
+
+.disable-selection {
+  -webkit-user-select: none; /* Chrome all / Safari all */
+  -moz-user-select: none;    /* Firefox all             */
+  -ms-user-select: none;     /* IE 10+                  */
+  user-select: none;
+}
+
+.image-delete {
+  @extend .disable-selection;
+  position: absolute;
+  top: 0px;
+  width: 28px;
+  height: 28px;
+  text-align: center;
+  color: red;
+  font-size: 25px;
+  line-height: 26px;
+  cursor: pointer;
+}
+
+.image-delete:hover {
+  border: 1px solid;
+  border-radius: 5px;
+}
+
+.image-deleted-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 99;
+  color: #fdfdfd;
+  text-align: center;
+  line-height: 200px;
+  top: 0;
+  left: 0;
+}
+
+.mc-back {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(55, 55, 55, 0.8);
+  top: 0;
+  z-index: 999;
+  display: flex;
+}
+
+.mc-inner {
+  margin: auto;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: rgb(255, 255, 255);
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 45px, rgba(0, 0, 0, 0.22) 0px 10px 18px;
+  border-radius: 2px;
+}
+
+.mc-content {
+  padding: 20px;
+  min-width: 700px;
+}
+
+.mc-title {
+ @extend .mc-content;
+}
+
+
+.mc-actions {
+  @extend .mc-content;
+  display: flex;
+ }
+
+ .mc-action-btn-spacing {
+  margin-left: auto;
+  margin-right: 10px;
+ }
+
